@@ -1,6 +1,8 @@
 Sep 24 2002  2.5.2  Tweaked network storing to not track ssids for probe, etc
                      networks.
                     Rolled cougar's patch for gpsmap tracks into gpsmap
+                    Rolled cougar's patch to fix a metric conversion bug in
+                     panelfront.
 Sep 23 2002  2.5.2  Tweaked hopper to go to channel 11 in the US ranges
                     Added netxml dtd 1.5 for new ip range handling
                     Fixed lucent router clients being classified as unknown.
